k8s/network-policies/api-can-only-access-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-can-only-access-db
  namespace: sandbox
spec:
  podSelector:
    matchLabels:
      app: kraken-api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
