k8s/network-policies/nothing-to-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nothing-to-ingress
  namespace: sandbox
spec:
  ingress: []
  podSelector:
    matchLabels:
      app: ingress
  policyTypes:
  - Ingress
