k8s/network-policies/web-cannot-access-anything.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-cannot-access-anything
  namespace: sandbox
spec:
  podSelector:
    matchLabels:
      app: kraken-web
  policyTypes:
  - Egress
  egress: []
